--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <p>Hello, world!</p>
+    <h1>The Learn Enough Story</h1>
+    <p>
+      Learn Enough to Be Dangerous...
+    </p>
+    <h2>Background</h2>
+    <h2>Founders</h2>
+    <h3>Michael Hartl</h3>
+    <h3>Lee Donahoe</h3>
+    <h3>Nick Merwin</h3>
   </body>
 </html>
+<h2>Inline Elements</h2>
+  <table>
+    <tr>
+      <th>Tag</th>
+      <th>Name</th>
+      <th>Purpose</th>
+      <th>Example</th>
+      <th>Result</th>
+    </tr>
+    <tr>
+      <td><code>em</code></td>
+      <td>emphasized</td>
+      <td>make emphasized text</td>
+      <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
+      <td><em>technical sophistication</em></td>
+    </tr>
+  </table>
+  
